--- a/login.css
+++ b/login.css
@@ -486,7 +486,7 @@ div.kc-logo-text span {
 #kc-info-wrapper {
     font-size: 13px;
     padding: 15px 35px;
-    background-color: #F0F0F0;
+    background-color: #e4f5bc;
 }
 
 #kc-form-options span {
